Bug #12534: nlist() needs to be handled differently in Mac OS X

X.Org Bugzilla #12534 <https://bugs.freedesktop.org/show_bug.cgi?id=12534>
Patch #11704 <https://bugs.freedesktop.org/attachment.cgi?id=11704>